// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a basic button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<button
  className="c0"
>
  Click me
</button>
`;

exports[`Button renders a full width button 1`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<button
  className="c0"
>
  Click me
</button>
`;

exports[`Button renders a full width button 2`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;

exports[`Button renders a primary button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #000000;
  color: #ffffff;
  border: solid 1px #000000;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<button
  className="c0"
>
  Click me
</button>
`;

exports[`Button renders a secondary button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #ffffff;
  color: #000000;
  border: solid 1px #000000;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<button
  className="c0"
>
  Click me
</button>
`;

exports[`Button when "disabled" prop is supplied renders a disabled button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #cccccc;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
>
  Click me
</button>
`;

exports[`LinkButton renders a basic link button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;

exports[`LinkButton renders a disabled link button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #cccccc;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition: none;
  transition: none;
  cursor: not-allowed;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

<a
  className="c0"
  disabled={true}
>
  Click me
</a>
`;

exports[`LinkButton renders a full width link button 1`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;

exports[`LinkButton renders a full width link button 2`] = `
.c0 {
  display: block;
  width: 100%;
  padding: 18px 30px 15px 30px;
  background: #F8F8F8;
  color: #000000;
  border: solid 1px #F8F8F8;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;

exports[`LinkButton renders a primary link button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #000000;
  color: #ffffff;
  border: solid 1px #000000;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;

exports[`LinkButton renders a secondary link button 1`] = `
.c0 {
  display: inline-block;
  padding: 18px 30px 15px 30px;
  background: #ffffff;
  color: #000000;
  border: solid 1px #000000;
  font-family: 'ITC Avant Garde Gothic W01';
  font-weight: normal;
  font-size: 13px;
  line-height: 13px;
  text-transform: uppercase;
  -webkit-transition-property: background,border-color,color;
  transition-property: background,border-color,color;
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
}

.c0:hover {
  background: #6E1FFF;
  border-color: #6E1FFF;
  color: #ffffff;
}

<a
  className="c0"
>
  Click me
</a>
`;
